--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
-    <title>Video Landing</title>
+    <title>Powernest LLC</title>
   </head>
   <body class="antialiased bg-neutral-950 text-neutral-100">
     <div id="root"></div>
